tests/compile_fail/repeated_short.stderr
error: The `short` attribute with value `n` is repeated with another field.
  --> $DIR/repeated_short.rs:11:9
   |
11 |     pub name2: bool,
   |         ^^^^^
